--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "baers",
+  "private": true,
   "version": "0.1.0",
   "description": "Programmatically honor the cock Pärssinen (Bärs or Baers).",
+  "author": "Joni Rämö <yotara91@gmail.com>",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -11,8 +14,6 @@
     "cock",
     "baers"
   ],
-  "author": "Joni Rämö <yotara91@gmail.com>",
-  "license": "ISC",
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.17.4",
